LPS-29913 - Convert the charts in Server Administration to using the Alloy charts

--- a/portal-impl/src/content/Language.properties
+++ b/portal-impl/src/content/Language.properties
@@ -759,6 +759,7 @@ advanced-search-in-x=Advanced search in {0}.
 advanced-styling=Advanced Styling
 advanced=Advanced
 age=Age
+aggregate=Aggregate
 aim=AIM
 albanian=Albanian
 alerts-and-announcements=Alerts and Announcements
@@ -2271,8 +2272,10 @@ found-in-deleted-folder-x=Found in deleted folder {0}.
 fourth=Fourth
 framework-version=Framework Version
 framework-versions=Framework Versions
+free-maximum-memory=Free Maximum Memory
 free-memory=Free Memory
 free-shipping=Free Shipping
+free-total-memory=Free Total Memory
 french=French
 friday-abbreviation=F
 friend-requested=Friend Requested
@@ -2931,6 +2934,7 @@ maximum-thumbnail-width=Maximum Thumbnail Width
 maximum=Maximum
 maybe-attending=Maybe Attending
 maybe=Maybe
+mb=MB
 me=Me
 media-files-must-be-one-of-the-following-formats=Media files must be one of the following formats:
 medium-image-url=Medium Image URL
